[gd_scene load_steps=4 format=3 uid="uid://c0i1pixjjni20"]

[ext_resource type="Script" uid="uid://dqkawl750gyc7" path="res://src/objects/props/caixa/caixa.gd" id="1_shnb5"]
[ext_resource type="Texture2D" uid="uid://bjqw0s22iqjgj" path="res://assets/placeholders/box.png" id="2_iaa7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8thq"]
size = Vector2(64, 64)

[node name="Caixa" type="AnimatableBody2D" node_paths=PackedStringArray("RayUP", "RayDown", "RayLeft", "RayRight")]
collision_layer = 2
script = ExtResource("1_shnb5")
RayUP = NodePath("RayUp")
RayDown = NodePath("RayDown")
RayLeft = NodePath("RayLeft")
RayRight = NodePath("RayRight")
metadata/_custom_type_script = "uid://dqkawl750gyc7"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_r8thq")

[node name="RayUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -40)
collision_mask = 3

[node name="RayDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 40)
collision_mask = 3

[node name="RayLeft" type="RayCast2D" parent="."]
target_position = Vector2(-40, 0)
collision_mask = 3

[node name="RayRight" type="RayCast2D" parent="."]
target_position = Vector2(40, 0)
collision_mask = 3

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -11.5
offset_right = 21.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Caixa"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iaa7i")
